--- a/client/src/scss/partials/setup/variables/_size.scss
+++ b/client/src/scss/partials/setup/variables/_size.scss
@@ -21,6 +21,8 @@ $navigation-primary-link-margin-y: $spacer-4;
 $navigation-primary-link-padding-x: $spacer-4;
 $navigation-primary-link-padding-y: $spacer-3;
 
+$select-arrow-background-size: 0.75rem; // Somewhere between $spacer-4 and $spacer-5
+
 $services-table-padding-x: $spacer-5;
 $services-table-padding-y: $spacer-3;
 
